--- a/restaurants/templates/detail.html
+++ b/restaurants/templates/detail.html
@@ -15,12 +15,20 @@
     <p class="card-text">{{restaurant.description|linebreaks}}</p>
     <p class="card-text">Opening Time: {{restaurant.opening_time}}</p>
     <p class="card-text">Closing Time: {{restaurant.closing_time}}</p>
+    {% for item in items %}
+      <p class="card-text">Closing Item name: {{item.name}}</p>
+        <p class="card-text">Item des: {{item.description}}</p>
+          <p class="card-text">Item price: {{item.price}}</p>
+          {% endfor%}
     <div class="row text-center">
         <div class="col-md-6">
             <a href="{% url 'restaurant-update' restaurant.id %}" class="btn btn-outline-primary btn-block">Update</a>
         </div>
         <div class="col-md-6">
             <a href="{% url 'restaurant-delete' restaurant.id %}" class="btn btn-outline-danger btn-block">Delete</a>
+        </div>
+        <div class="col-md-6">
+            <a href="{% url 'item-create' restaurant.id %}" class="btn btn-outline-danger btn-block">Create Item</a>
         </div>
     </div>
   </div>
